@@ -4,6 +4,8 @@ import object.Book;
 import object.User;
 import java.io.BufferedReader;
 import java.util.*;
+import java.lang.Object;
+import java.util.stream.Collectors;
 
 public class Library {
     public Map<String, User> users = new HashMap<>();
@@ -29,24 +31,18 @@ public class Library {
      **/
     @SuppressWarnings("all")
     public int processTransaction(String cmdStr, BufferedReader br){
-        //輸入的單行指令由空格隔開(可以是多個)
-        //透過stream的方法轉成List，構造成LinkedList
-        //透過LinkedList提供的方法模擬隊列，避免索引寫死如果沒有操作數會越界的問題
-        LinkedList<String> strQueue = new LinkedList<>(Arrays.stream(cmdStr.split("\\s+")).toList());
+
+        LinkedList<String> strQueue = new LinkedList<>(Arrays.stream(cmdStr.split("\\s+")).collect(Collectors.toList()));
         User invoker = users.get(strQueue.removeFirst());
         String instruction = strQueue.removeFirst();
         String arg;
         if(strQueue.isEmpty()){
-            //前面已remove兩次，如果是空的代表後面沒有參數了
             arg = "";
         }else{
             arg = strQueue.removeFirst();
         }
-        //如果指令需要用到BufferedReader，就直接用lib的
         this.br = br;
-        //仔細觀察可以發現除了addBook外的指令都需引數
-        //但為了符合開閉原則，即使是addBook仍然傳遞引數(空字串)
-        //呼叫CommandFactory構造指令類
+
         try{
             Command cmd = CommandFactory.createCommand(instruction);
             invoker.setCmd(cmd);
